[tool.poetry]
name = "Ampharos-Images"
version = "3.0.0"
description = "Image assets for Ampharos"
authors = ["bijij <josh@josh-is.gay>"]
license = "MIT"
readme = "README.rst"
include = ["ampharos_images/img/*"]
packages = [
  { include = "ampharos_images" }
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.10"
ampharos = "^3.0.0"

[tool.poetry.dev-dependencies]
black = ">=20.8b1"
isort = "^5.10.1"
pytest = "^6.2.3"

[tool.black]
line-length = 125
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | res
)/
'''

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = "warning"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest]
addopts = "--capture=no --assert=plain --strict-markers --tb native"
testpaths = "tests"
filterwarnings = "default"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
